<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="text_test">测试用</string>
    <string name="text_testContext1">女生节搬桌子</string>
    <string name="app_name">imutest</string>
    <string name="action_settings">Settings</string>
    <string name="title_task">任务</string>
    <string name="title_subtitle">我的任务</string>
    <string name="title">首页</string>
    <string name="concrete">任务详情</string>
    <string name="btn_return">返回</string>
    <string name="title_activity_people_arrange">人员安排</string>
    <string name="title_activity_list_people">人员名单</string>
    <string name="hint_task_theme">主题:</string>
    <string name="btn_release">发布</string>
    <string name="btn_all_select">全选</string>
    <string name="btn_all_concel">撤销</string>
    <string name="btn_commit">确定</string>
    <string name="btn_add">添加</string>
    <string name="title_activity_edit_task">编辑任务</string>
    <string name="hint_dead_time">截止时间:</string>
    <string name="hint_task_context">任务内容:</string>
    <string name="btn_save_task">保存</string>
    <string name="btn_people_arrange">人员安排</string>
    <string name="text_organier">组织者</string>
    <string name="text_performer">执行者</string>
    <string name="title_activity_list">任务列表</string>
    <string name="hint_search">按名字查找</string>

</resources>