<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.scnu.imutest.PeopleArrange" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:background="@color/title_background" >

        <TextView
            style="@style/Front_Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/title_activity_people_arrange"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <ImageButton
            android:id="@+id/btnReturnEditTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@color/title_background"
            android:contentDescription="@string/btn_return"
            android:onClick="returnLast"
            android:src="@drawable/btn_return" />

        <ImageButton
            android:id="@+id/btnAddPeople"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@color/title_background"
            android:contentDescription="@string/btn_add"
            android:onClick="startListPeople"
            android:src="@drawable/btn_add"
            android:textColor="@color/title_background" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/list_base_margin"
        android:paddingRight="@dimen/list_base_margin"
        android:paddingTop="@dimen/list_base_margin" >

        <TextView
            android:id="@+id/tvTaskTheme"
            style="@style/Front_EditTask"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/corner_round_all"
            android:hint="@string/hint_task_theme"
            android:lines="1"
            android:padding="@dimen/list_base_margin" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="@dimen/list_base_margin" >

        <ListView
            android:id="@+id/lvPeople"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/corner_round_all" >
        </ListView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/list_base_margin"
        android:paddingLeft="@dimen/list_base_margin"
        android:paddingRight="@dimen/list_base_margin" >

        <Button
            android:id="@+id/btnRelease"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/title_background"
            android:onClick="btnRelease"
            android:padding="@dimen/btn_release_margin"
            android:text="@string/btn_release"
            android:textColor="@color/front_title"
            android:textSize="@dimen/front_btn" />
    </LinearLayout>

</LinearLayout>